<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/event_text_name"
        android:layout_alignParentLeft="true"
        android:visibility="visible" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/event_text_name"
        android:hint="@string/event_name"
        android:textSize="25sp"
        android:textStyle="bold"
        android:id="@+id/event_name"
        android:inputType="text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/event_name"
        android:id="@+id/event_text_location"
        android:textColor="#262323"

        android:visibility="visible"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/event_text_location"
        android:textSize="22sp"
        android:hint="@string/location"
        android:textStyle="bold"
        android:id="@+id/location"
        android:inputType="text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/event_text_date"
        android:layout_below="@id/location"
        android:text="@string/event_date_and_time"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="visible"
        android:textColor="#262323"
        android:paddingBottom="@dimen/abc_action_bar_overflow_padding_end_material"
        android:paddingTop="@dimen/abc_text_size_headline_material" />

    <EditText
        android:layout_width="@dimen/abc_search_view_text_min_width"
        android:layout_height="@dimen/notification_large_icon_height"
        android:layout_below="@id/event_text_date"
        android:hint="Set Date"
        android:id="@+id/event_date"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/notification_large_icon_height"
        android:layout_below="@id/event_text_date"
        android:layout_toRightOf="@id/event_date"
        android:hint="Set Time"
        android:id="@+id/event_time"
        android:layout_alignEnd="@+id/event_text_date" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#262323"
        android:text="@string/set_privacy"
        android:layout_below="@id/event_date"
        android:id="@+id/set_privacy_text"
        android:paddingBottom="@dimen/abc_action_bar_overflow_padding_end_material"
        android:paddingTop="@dimen/abc_action_bar_icon_vertical_padding_material" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/event_time"
        android:id="@+id/set_privacy"
        android:layout_toRightOf="@id/set_privacy_text"
        android:paddingTop="@dimen/abc_action_button_min_width_overflow_material" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/set_privacy"
        android:id="@+id/text_description"
        android:textColor="#262323"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="visible"
        android:paddingTop="@dimen/abc_action_bar_overflow_padding_end_material"
        android:text="@string/Description"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_description"
        android:lines="3"
        android:minLines="3"
        android:maxLines="3"
        android:gravity="top|left"
        android:scrollbars="vertical"
        android:id="@+id/description"
        android:inputType="textMultiLine"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/event_text_deadline_date"
        android:layout_below="@id/description"
        android:textColor="#262323"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="visible"
        android:paddingTop="@dimen/abc_action_bar_overflow_padding_end_material"
        android:text="@string/event_post_deadline_date"/>


    <EditText
        android:layout_width="@dimen/abc_search_view_text_min_width"
        android:layout_height="@dimen/notification_large_icon_height"
        android:layout_below="@id/event_text_deadline_date"
        android:hint="Set Date"
        android:id="@+id/event_deadline_date"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/notification_large_icon_height"
        android:layout_below="@id/event_text_deadline_date"
        android:layout_toRightOf="@id/event_deadline_date"
        android:hint="Set Time"
        android:id="@+id/event_deadline_time"/>


    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/timezone"
        android:layout_toRightOf="@id/event_deadline_time"
        android:layout_below="@id/event_text_deadline_date" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/event_deadline_date"
        android:id="@+id/event_text_create_hashtags"
        android:textColor="#262323"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="visible"
        android:text="@string/event_create_hashtags"
        android:paddingTop="@dimen/abc_action_bar_overflow_padding_end_material"
        android:layout_alignParentEnd="false" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/event_text_create_hashtags"
        android:id="@+id/event_create_hashtags"
        android:inputType="text"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/event_create_hashtags"
        android:id="@+id/done"
        android:gravity="center"
        android:text="Create Event"
        android:layout_centerInParent="true"/>

</RelativeLayout>